2002-03-28  David Gravereaux <davygrvy@pobox.com>
	* tools/feather.bmp:
	* tools/man2help.tcl:
	* tools/man2help2.tcl:
	* win/makefile.vc: More winhelp target fixups.  Added a feather
	bitmap to the non-scrollable area and changed the color to be
	yellow from a plain white.  The colors can be whatever we want
	them to be, but thought I would start with something bold.
	[Bug 527941]

2002-03-27  David Gravereaux <davygrvy@pobox.com>

	* tools/man2help.tcl:
	* win/makefile.vc:  winhelp target now copies all needed files
	from tools/ to a workarea under $(OUT_DIR) and builds it from
	there.  No build cruft is left in tools/ anymore.  All paths
	used in man2help.tcl are now relative to where the script is.
	[Bug 527941]

2002-03-27  David Gravereaux <davygrvy@pobox.com>

	* win/.cvsignore:
	* win/buildall.vc.bat:
	* win/coffbase.txt:
	* win/makefile.vc:
	* win/nmakehlp.c (new):
	* win/rules.vc:  First draft fix for [Bug 527941].  More changes
	need to done to the makehelp target to get to stop leaving build
	files in the tools/ directory.  This does not address the syntax
	errors in the man files.  Having the contents of tcl.hpj(.in)
	inside makefile.vc allows for version numbers to be replaced with
	macros.
	
	The new nmakehlp.c is built by rules.vc in preprocessing and removes
	the need to use tricky shell syntax that wasn't compatible on Win9x
	systems.  Clean targets made Win9x complient.  This is a first draft
	repair for [Bug 533862].

2002-03-28  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclBasic.c (Tcl_EvalEx): passing the correct commandSize
	to TclEvalObjvInternal. [Bug 219362], fix by David Knoll.

2002-03-28  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclBasic.c (Tcl_EvalEx):
	* tests/basic.test: avoid exceptional returns at level 0 
	[Bug 219181] 

2002-03-27  Don Porter  <dgp@users.sourceforge.net>

	* doc/tcltest.n ([mainThread]):
	* library/tcltest/tcltest.tcl: